[gd_scene load_steps=4 format=3 uid="uid://fchbevtkemsv"]

[ext_resource type="Script" path="res://UserInterface/Main Menu/MainMenu.gd" id="1_csg2m"]
[ext_resource type="Texture2D" uid="uid://dlkch2nbdhwxf" path="res://UserInterface/Main Menu/main-menu-background.png" id="2_hsjfk"]

[sub_resource type="Theme" id="Theme_c1uh2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csg2m")

[node name="Cows-san-diego-animal-farm-sanctuary2" type="Sprite2D" parent="."]
position = Vector2(944, 538)
scale = Vector2(1.09203, 1.11926)
texture = ExtResource("2_hsjfk")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -943.0
offset_top = -25.5
offset_right = -73.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.3868, 2.88785e-07, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 80
text = "The Parks Department"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -926.0
offset_top = 84.5
offset_right = -363.0
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Load Game"

[node name="Options Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -8.432

[node name="Options" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -929.0
offset_top = 85.5
offset_right = -354.0
offset_bottom = 419.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
layout_mode = 2
theme = SubResource("Theme_c1uh2")

[node name="Res Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Resolution"

[node name="Res Button" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "3840x2160"
popup/item_1/text = "2560x1440"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "800x600"
popup/item_4/id = 4

[node name="Screen Type Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Screen Type"

[node name="Screen Type" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2

[node name="CheckButton" type="CheckButton" parent="Options/VBoxContainer2"]
visible = false
layout_mode = 2
button_pressed = true
text = "Full Screen"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 425

[node name="FPS Label" type="Label" parent="Options/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "FPS"

[node name="FPS Toggle" type="CheckButton" parent="Options/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Show FPS"

[node name="FPS" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
item_count = 5
popup/item_0/text = "30"
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "144"
popup/item_3/id = 3
popup/item_4/text = "240"
popup/item_4/id = 4

[node name="Quality Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Quality"

[node name="Quality Button" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "High"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2

[node name="Sound Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Sound Level"

[node name="HSlider" type="HSlider" parent="Options/VBoxContainer2"]
layout_mode = 2
max_value = 4.0
step = 0.1
value = 1.0

[node name="Close Button" type="Button" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Close"

[node name="CurrentFPS" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "FPS: 60"

[connection signal="pressed" from="VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="Options/VBoxContainer2/Res Button" to="." method="_on_res_button_item_selected"]
[connection signal="item_selected" from="Options/VBoxContainer2/Screen Type" to="." method="_on_screen_type_item_selected"]
[connection signal="toggled" from="Options/VBoxContainer2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Options/VBoxContainer2/HBoxContainer/FPS Toggle" to="." method="_on_fps_toggle_toggled"]
[connection signal="item_selected" from="Options/VBoxContainer2/FPS" to="." method="_on_fps_item_selected"]
[connection signal="value_changed" from="Options/VBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Options/VBoxContainer2/Close Button" to="." method="_on_close_button_pressed"]
